@@ -1,4 +1,4 @@
-### 
+
 <h1 align="center"> Main menu : </h1>
 
 <div align="center">
@@ -6,6 +6,26 @@
   <img align="left" height=50% width=45% src="https://github.com/HeapGeap/MSGame/blob/master/assetsGit/Main_menu.png"  />
   
   <img align="right" height=50% width=48% src="https://github.com/HeapGeap/MSGame/blob/master/assetsGit/Game_configuration.png"  />
-  
+  <br>
 </div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
+---
+
+<h2 align="center"> Game process : </h2>
+<div align="center">
+  
+  <img align="left" height=55% width=45% src="https://github.com/HeapGeap/MSGame/blob/master/assetsGit/Lose_game.gif"  />
+  
+  <img align="right" height=45% width=45% src="https://github.com/HeapGeap/MSGame/blob/master/assetsGit/Win_game.gif"  />
+  <br>
+</div>
+<br><br><br><br><br><br><br><br><br><br><br>
+
+---
+
+<h2 align="center"> Get started </h2>  
+Required environment : Intellij idea (latest version), JavaFx library 16+.
+Follow steps below to start project : <br>
+◾ Run --> Edit Configurations --> Choose sample.Main as a starter --> Modify options --> add VM options --><br> Put {your path to lib} --add-modules {all modules from lib}; <br>
+◾ File --> Project Structure --> Libraries --> New project library --> Java --> add lib path to the field.
